--- a/apps/core/templates/core/base.html
+++ b/apps/core/templates/core/base.html
@@ -45,6 +45,7 @@
         }
     </style>
     <div id="allContentArea">
+        {% include 'popup/cookie.html' %}
         <!---CONTENT---> 
         {% block content %}{% endblock %}
         <!---CONTENT END---> 
