--- a/apps/store/templates/core/product.html
+++ b/apps/store/templates/core/product.html
@@ -7,79 +7,29 @@
 {% block content %}
 <link rel="stylesheet" href="{% static '/scss/store/product.css' %}" type="text/css">
 
-
-<div id="productapp">
-
- 
-   <button @click="addToCart({{ product.id }})" onclick="cart()">legg til handlekurv</button>
-
-
-   <hr>
-
-   
+<div class="cover">
+   <div class="cover-desktop">
+      <div class="cover-text">
+         <h1>Les mer om {{product.name}}</h1>
+         <p id="coverText2">Finn ut om en {{product.name}} nettside passer for deg</p>
+      </div>
+      <div class="img">
+         <img src="{% static '/images/covers/cover-8.png' %}" alt="cover-img">
+      </div>
+   </div>
+   <div class="cover-mobile">
+      <div class="cover-text">
+         <h1>Les mer om {{product.name}}</h1>
+         <p id="coverText2">Finn ut om en {{product.name}} nettside passer for deg</p>
+      </div>
+      <div class="img">
+         <img src="{% static '/images/covers/cover-8.png' %}" alt="cover-img">
+      </div>
+   </div>
 </div>
 
-
+<div class="product-page">
+   <h1 class="heading">Info om {{product.name}}</h1>
+   <br>
+</div>
 {% endblock %}
-
-
-
-
-{% block scripts %}
-<script>
-
-   const productapp = new Vue({
-      el: '#productapp',
-      delimeters: ['[[', ']]'],
-      store: store,
-      data () {
-         return {
-            showMessage: false,
-         }
-      },
-      mounted() {
-         console.log('Mounted');
-      },
-      methods: {
-         addToCart(product_id) {
-            console.log('Product_id', product_id);
-
-            const data = {
-               'product_id': product_id, 
-               'update': false,
-               'quantity': 1
-         };
-
-            fetch('/api/add_to_cart/', {
-               method: 'POST',
-               headers: {
-                  'Content-Type': 'application/json',
-                  'X-CSRFToken': '{{ csrf_token }}'
-               },
-               credentials: 'same-origin',
-               body: JSON.stringify(data)
-            }) 
-            .then((response) =>{
-               console.log(response)
-
-               this.showMessage = true
-
-               store.commit('increment', 1);
-
-               setTimeout(() =>{
-                  this.showMessage = false
-               }, 2000)
-
-
-            })
-            .catch(function (error) {
-               console.log('Error 2');
-               console.log(error);
-            })
-         }
-      }
-   });
-</script>
-{% endblock %}
-
-
