--- a/static/scss/parts/popup.css
+++ b/static/scss/parts/popup.css
@@ -1,8 +1,8 @@
 #popup {
-  display: unset;
+  opacity: 1;
   padding: 20px;
   position: fixed;
-  bottom: 50%;
+  bottom: 0;
   width: 100%;
   height: auto;
   z-index: 10;
@@ -10,48 +10,35 @@
   background: #fafafa;
   -webkit-transition: .5s;
   transition: .5s;
-  -webkit-box-shadow: 0px 1px 50px rgba(30, 30, 30, 0.8);
-          box-shadow: 0px 1px 50px rgba(30, 30, 30, 0.8);
+  -webkit-box-shadow: 0px 1px 50px #3c54a0;
+          box-shadow: 0px 1px 50px #3c54a0;
+  -webkit-transition: all .5s ease-in-out;
+  transition: all .5s ease-in-out;
 }
 
 #popup h1 {
   width: auto;
   color: black;
   font-size: 16px;
-  margin: 10px;
-}
-
-#popup p {
-  margin: 20px;
-  color: black;
-  font-size: 14px;
-  text-decoration: underline;
-  color: blue;
+  margin: 20px auto;
+  font-family: 'Sniglet', cursive;
 }
 
 #popup button {
-  color: #323232;
   padding: 5px;
-  border: 1px solid #2d9cb3;
   width: 50%;
   text-align: center;
-  background: rgba(230, 230, 230, 0.9);
-  text-transform: uppercase;
-  -webkit-transition: .3s;
-  transition: .3s;
-}
-
-#popup button:hover {
-  background: #2d9cb3;
+  background: linear-gradient(135deg, #3c54a0, #7996f8);
+  -webkit-box-shadow: 1.5px 3px 2px #3c54a0;
+          box-shadow: 1.5px 3px 2px #3c54a0;
+  border: 2px solid transparent;
   color: white;
-}
-
-#popup button:active {
-  background: #2d9cb3;
-  color: white;
+  border-radius: 4px;
 }
 
 #popup.hidden {
-  display: none;
+  opacity: 0;
+  -webkit-transform: translateY(50px);
+          transform: translateY(50px);
 }
 /*# sourceMappingURL=popup.css.map */
