--- a/static/scss/parts/popup.scss
+++ b/static/scss/parts/popup.scss
@@ -1,48 +1,36 @@
 // STANDARD PHONE
     #popup{
-        display: unset;
+        opacity: 1;
         padding: 20px;
         position: fixed;
-        bottom: 50%;
+        bottom: 0;
         width: 100%;
         height: auto;
         z-index: 10;
         text-align: center;
         background: rgb(250, 250, 250);
         transition: .5s;
-        box-shadow: 0px 1px 50px rgba(30, 30, 30, 0.8);
+        box-shadow: 0px 1px 50px rgb(60, 84, 160);
+        transition: all .5s ease-in-out;
         h1{
             width: auto;
             color: black;
             font-size: 16px;
-            margin: 10px;
-        }
-        p{
-            margin: 20px;
-            color: black;
-            font-size: 14px;
-            text-decoration: underline;
-            color: blue;
+            margin: 20px auto;
+            font-family: 'Sniglet', cursive;
         }
         button{
-            color: rgb(50, 50, 50);
             padding: 5px;
-            border: 1px solid #2d9cb3;
             width: 50%;
             text-align: center;
-            background: rgba(230, 230, 230, 0.9);
-            text-transform: uppercase;
-            transition: .3s;
-            &:hover{
-                background: #2d9cb3;
-                color: white;
-            }
-            &:active{
-                background: #2d9cb3;
-                color: white;
-            }
+            background: linear-gradient(135deg,rgb(60, 84, 160), #7996f8);    
+            box-shadow: 1.5px 3px 2px rgb(60, 84, 160);
+            border: 2px solid transparent; 
+            color: white; 
+            border-radius: 4px;
         }
         &.hidden{
-            display: none;
+            opacity: 0;
+            transform: translateY(50px);
         }
     }
