--- a/static/scss/store/order.css
+++ b/static/scss/store/order.css
@@ -104,7 +104,7 @@
   padding: 0 2px;
   position: absolute;
   left: 15px;
-  top: 331px;
+  top: 329px;
   z-index: 1;
 }
 
@@ -475,6 +475,78 @@
   font-weight: 700;
   font-size: 26px;
   text-align: center;
+}
+
+.make-order form .order-form-step2 .info {
+  width: 100%;
+  text-align: center;
+  font-size: 14px;
+  color: #3c54a0;
+  margin-bottom: -5px;
+  margin-top: 10px;
+  opacity: 0.7;
+  pointer-events: none;
+}
+
+.make-order form .order-form-step2 .form-tag-css {
+  font-size: 15px;
+  color: #3c54a0;
+  background: white;
+  width: -webkit-max-content;
+  width: -moz-max-content;
+  width: max-content;
+  padding: 0 2px;
+  position: absolute;
+  left: 15px;
+  top: 72px;
+}
+
+.make-order form .order-form-step2 .form-tag-html {
+  font-size: 15px;
+  color: #3c54a0;
+  background: white;
+  width: -webkit-max-content;
+  width: -moz-max-content;
+  width: max-content;
+  padding: 0 2px;
+  position: absolute;
+  left: 15px;
+  top: 136px;
+}
+
+.make-order form .order-form-step2 .form-tag-javascript {
+  font-size: 15px;
+  color: #3c54a0;
+  background: white;
+  width: -webkit-max-content;
+  width: -moz-max-content;
+  width: max-content;
+  padding: 0 2px;
+  position: absolute;
+  left: 15px;
+  top: 200px;
+}
+
+.make-order form .order-form-step2 .form-tag-python_django {
+  font-size: 15px;
+  color: #3c54a0;
+  background: white;
+  width: -webkit-max-content;
+  width: -moz-max-content;
+  width: max-content;
+  padding: 0 2px;
+  position: absolute;
+  left: 15px;
+  top: 265px;
+}
+
+.make-order form .order-form-step2 .input {
+  width: 100%;
+  border: 2px solid #3c54a0;
+  border-radius: 4px;
+  padding: 7px;
+  outline: none;
+  font-size: 15px;
 }
 
 .make-order form .order-form-step3 {
