--- a/apps/core/templates/core/home.html
+++ b/apps/core/templates/core/home.html
@@ -83,7 +83,7 @@
    <div class="border"></div>
 </div>
 
-<div id="productScrollTo" style="height: 60px; width: 100%; background: white;"></div>
+<div id="productScrollTo" class="scroll-to" style="height: 60px; width: 100%"></div>
 <div class="product-section" id="productHomePage">
    <h1 class="heading">Priser</h1>
    <div class="flex">
@@ -108,7 +108,7 @@
    <div class="border"></div>
 </div> -->
 
-<div id="proccessScrollTo" style="height: 60px; width: 100%; background: white;"></div>
+<div id="proccessScrollTo" class="scroll-to" style="height: 60px; width: 100%;"></div>
 <div class="proccess" id="info">
    <h1 class="heading">Så enkelt er det</h1>
    <div class="content">
@@ -141,14 +141,15 @@
    <div class="border"></div>
 </div>
 
-<div id="hostingScrollTo" style="height: 60px; width: 100%; background: white;"></div>
+<div id="hostingScrollTo" class="scroll-to" style="height: 60px; width: 100%;"></div>
 <div class="hosting" id="hosting">
-   <h1 class="heading">100% sikerhet med vår hosting tjeneste</h1>
+   <h1 class="heading">100% sikkerhet med vår hosting tjeneste</h1>
    <p>Bli synlig på nett i dag med Norges beste hosting tjeneste</p>
+   <button onclick="window.location.href='/bestill'" class="home-order">Bestill</button>
    <div class="border"></div>
 </div>
 
-<div id="contactScrollTo" style="height: 60px; width: 100%; background: white;"></div>
+<div id="contactScrollTo" class="scroll-to" style="height: 60px; width: 100%;"></div>
 <div class="contact-us" id="contactUs">
    <h1 class="heading">Trenger du extra hjelp?</h1>
    <p>Kontakter oss under</p>
