--- a/apps/order/templates/core/order.html
+++ b/apps/order/templates/core/order.html
@@ -64,7 +64,7 @@
                <div class="loader__element" id="loaderElPortofolio"></div>
              </div>
            </h1>
-           <h1 class="if-custom info order-product-info" id="ifBedrift">Hvis du velger en Bedrift nettside, så får du en nettside for din bedrift.
+           <h1 class="if-custom info order-product-info" id="ifBedrift">Hvis du velger en Bedrift nettside, så får du en nettside som forklarer hva bedriften din handler om.
             <div class="loader">
                <div class="loader__element" id="loaderElBedrift"></div>
              </div>
@@ -116,12 +116,12 @@
            <label for="color" class="form-tag-color tag">Velg en farge som passer bedriften din</label>
            <br>
            <div class="color-inputs">
-              <input type="text" name="color_hex" class="color-hex input" id="color_hex" value="#">
+              <input type="text" name="color_hex" class="color-hex input" id="color_hex" value="#ffff">
                <div class="or">eller</div>
               <input type="color" id="color" name="color" class="color input" required oninvalid="this.setCustomValidity('Værsåsnill, velg en farge')" oninput="this.setCustomValidity('')">
             </div>
             <br>
-            <h1 class="info">Alle priser har inkludert en Hjemme side og en Kontakt oss side. En ekstra side koster 399kr</h1>
+            <h1 class="info">Alle priser har inkludert en Om oss side og en Kontakt oss side. En ekstra side koster 399kr</h1>
             <label for="num_pages" class="form-tag-num_pages tag">Velg antall ekstra sider</label>
             <br>
             <input type="number" id="num_pages" name="num_pages" class="input" readonly onclick="orderNumPagesDropdown()"><div class="num-pages-price" id="numPagesPrice" onclick="orderNumPagesDropdown()">0kr</div><div onclick="orderNumPagesDropdown()" class="arrow-down"><i class="fas fa-angle-down"></i></div>
