--- a/static/scss/store/order.css
+++ b/static/scss/store/order.css
@@ -137,10 +137,7 @@
 }
 
 .make-order form .order-form-step1 .color-inputs .input.color {
-  padding: 1px;
-  padding-left: 50px;
-  padding-right: 50px;
-  padding-top: 15px;
+  padding: 15px 60px 5px 65px;
   background: white;
   border: none;
 }
