--- a/static/scss/store/order.scss
+++ b/static/scss/store/order.scss
@@ -107,10 +107,7 @@ $loader: rgb(80, 104, 180);
                 height: 55px;
                 padding-top: 10px;
                 &.color{
-                  padding: 1px;
-                  padding-left: 50px;
-                  padding-right: 50px;
-                  padding-top: 15px;
+                  padding: 15px 60px 5px 65px;
                   background: white;
                   border: none;
                 }  
