--- a/apps/core/templates/core/nav.html
+++ b/apps/core/templates/core/nav.html
@@ -16,8 +16,9 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
 
+
 <div id="navbar">
-    <div class="logo" id="logo" onclick="window.location.href=''">
+    <div class="logo" id="logo" onclick="window.location.href='/'">
         <h1 class="logo1" alt="logo1">Webiser</h1>
     </div>
     <!-- PHONE -->
@@ -42,17 +43,21 @@
     <a onclick="signUpORLogin()" class="my-account-icon" id="myAccountIcon">
         <i class="far fa-user-astronaut"></i>    
     </a>
+
     <div class="login-signup" id="loginORSignUp">
         <div id="choose">
-            {% if request.user.is_authenticated %}
-            <a onclick="myaccount()">Min bruker</a>
-            <a href="{% url 'logout' %}">Logg ut</a>
-            <a onclick="signUpORLoginBack()">Tilbake</a>
-            {% else %}
-            <a onclick="login()">Logg inn</a>
-            <a onclick="signup()">Lag bruker</a>
-            <a onclick="signUpORLoginBack()">Tilbake</a>
-            {% endif %}
+            <div class="part-one">
+                {% if request.user.is_authenticated %}
+                <a onclick="myaccount()">Min bruker</a>
+                <a id="logOut" href="{% url 'logout' %}">Logg ut</a>
+                {% else %}
+                <a onclick="login()">Logg inn</a>
+                <a>Lag bruker</a>
+                {% endif %}
+            </div>
+            <div class="part-two">
+                <a onclick="signUpORLoginBack()">Tilbake</a>
+            </div>
         </div>
         <div class="my-account" id="myAccount">
             <p><strong>Navn:</strong> {{ request.user.get_full_name }}</p>
@@ -110,13 +115,14 @@
             </div>
         </form>
     </div>
-    <a href="/bestill" class="order" id="makeOrder">Bestill</a>
-    <!-- DESKTOP -->
-    <div class="desktop-menu">
-        <ul class="desktop-ul">
-            <li class="desktop-li" id="desktopLi">
-                <a onclick="prices()">Priser</a>
-                <a href="/om-webiser">Om oss</a>
+        
+        <a href="/bestill" class="order" id="makeOrder">Bestill</a>
+        <!-- DESKTOP -->
+        <div class="desktop-menu">
+            <ul class="desktop-ul">
+                <li class="desktop-li" id="desktopLi">
+                    <a onclick="prices()">Priser</a>
+                    <a href="/om-webiser">Om oss</a>
                 <a onclick="info()">Prosess</a>
                 <a href="/hosting-informasjon">Hosting</a>
                 <a onclick="contact()">Kontakt oss</a>
