--- a/static/scss/base.scss
+++ b/static/scss/base.scss
@@ -13,6 +13,9 @@ html, body {
 #navBarSpace{
   display: none;
 }
+.scroll-to{
+  background: white;
+}
 .services{
   background: white;
   width: 100%;
@@ -36,6 +39,7 @@ html, body {
       color: rgb(20, 44, 120);
       font-weight: 700;
       font-size: 26px;
+      margin-bottom: 20px;
     }
      &#servicesFirstText{
       font-weight: unset;
@@ -359,6 +363,20 @@ html, body {
     text-transform: uppercase;
     font-family: 'Sniglet', cursive;
     color: rgb(60, 84, 160);
+  }
+  .home-order{
+    margin-top: 20px;
+    border-radius: 4px;
+    color: rgb(30, 30, 30);
+    width: 100px;
+    font-size: 15px;
+    padding: 5px;
+    transition: all .2s ease-in-out;
+    color: white;
+    outline: none;
+    background: linear-gradient(135deg,rgb(60, 84, 160), #7996f8);    
+    box-shadow: 1.5px 3px 2px rgb(60, 84, 160);
+    border: 2px solid transparent;
   }
   .border{
     background: rgb(100, 100, 100);
