--- a/apps/core/templates/core/base.html
+++ b/apps/core/templates/core/base.html
@@ -30,7 +30,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Arima+Madurai&display=swap" rel="stylesheet">
 
 </head>
-<body>
+<body ontouchstart="">
     {% include 'core/nav.html' %}
 
     <div id="backToTop" onclick="backToTop()"><i class="fas fa-location-arrow" id="backToTopIcon"></i></div>
